--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,11 @@
 {
-  "extends": ["react-app", "plugin:prettier/recommended"]
+  "extends": [
+    "react-app",
+    "plugin:prettier/recommended",
+    "airbnb",
+    "plugin:jsx-a11y/recommended"
+  ],
+  "rules": {
+    "react/jsx-filename-extension": [1, { "extensions": [".js"] }]
+  }
 }
