--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "husky": "^3.0.1",
+    "jquery": "^3.4.1",
     "lint-staged": "^9.2.1",
+    "popper.js": "^1.15.0",
     "pretty-quick": "^1.11.1",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.10",
     "react-datepicker": "^2.8.0",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
