--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
     "husky": "^3.0.1",
     "lint-staged": "^9.2.1",
     "pretty-quick": "^1.11.1",
-    "react": "^16.8.6",
+    "react": "^16.9.0",
     "react-datepicker": "^2.8.0",
-    "react-dom": "^16.8.6",
+    "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "reactstrap": "^8.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
