--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint-staged": "^9.2.1",
     "pretty-quick": "^1.11.1",
     "react": "^16.9.0",
+    "react-beautiful-dnd": "^11.0.5",
     "react-calendar": "^2.19.2",
     "react-datepicker": "^2.8.0",
     "react-dom": "^16.9.0",
