--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "husky": "^3.0.1",
     "lint-staged": "^9.2.1",
     "pretty-quick": "^1.11.1",
+    "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-beautiful-dnd": "^11.0.5",
     "react-calendar": "^2.19.2",
@@ -18,6 +19,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "reactstrap": "^8.0.1",
+    "readme-md-generator": "^0.6.4",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
   },
