--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,13 +2,12 @@
   "extends": [
     "react-app",
     "plugin:prettier/recommended",
-    "airbnb",
-    "plugin:jsx-a11y/recommended"
+    "plugin:jsx-a11y/recommended",
+    "airbnb"
   ],
   "rules": {
     "react/jsx-filename-extension": [1, { "extensions": [".js"] }],
     "import/prefer-default-export": "off",
-    "arrow-body-style": ["error", "always"],
-    "eslint arrow-parens": ["error", "always"]
+    "linebreak-style": ["error", "unix"]
   }
 }
