--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "precommit": "pretty-quick --staged",
+    "precommit": "pretty-quick --staged && prettier --check src/**/*.js",
     "lint": "eslint src/**/*.js"
   },
   "eslintConfig": {
