--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,18 @@
 {
   "extends": [
     "react-app",
-    "plugin:prettier/recommended",
+    "airbnb",
     "plugin:jsx-a11y/recommended",
-    "airbnb"
+    "plugin:prettier/recommended"
   ],
+  "plugins": ["jsx-a11y", "prettier"],
   "rules": {
-    "react/jsx-filename-extension": [1, { "extensions": [".js"] }],
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "import/prefer-default-export": "off",
-    "linebreak-style": ["error", "unix"]
+    "linebreak-style": 0,
+    "react/state-in-constructor": "off",
+    "react/static-property-placement": "off",
+    "react/jsx-props-no-spreading": "off",
+    "react/jsx-curly-newline": "off"
   }
 }
