--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,19 +1,13 @@
 {
   "extends": [
     "react-app",
-    "airbnb",
     "plugin:jsx-a11y/recommended",
     "plugin:prettier/recommended"
   ],
-  "plugins": ["jsx-a11y", "prettier"],
   "rules": {
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "import/prefer-default-export": "off",
-    "linebreak-style": 0,
-    "react/state-in-constructor": "off",
-    "react/static-property-placement": "off",
-    "react/jsx-props-no-spreading": "off",
-    "react/jsx-curly-newline": "off"
+    "linebreak-style": 0
   },
   "settings": {
     "import/resolver": {
