--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "^3.1.0",
     "reactstrap": "^8.1.1",
     "redux": "^4.0.4",
+    "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
