--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.1.0",
+    "react-sidebar": "^3.0.2",
     "reactstrap": "^8.1.1",
     "redux": "^4.0.4",
     "redux-mock-store": "^1.5.3",
