--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^16.11.0",
     "react-hook-form": "^3.26.1",
     "react-icons": "^3.8.0",
+    "react-particles-js": "^2.7.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.1.0",
